# sanguosha

./: .gitignore  CMakeLists.txt  README.md
include/: sanguosha.pb.cc  sanguosha.pb.h
include/client/: game_client.h
include/game/: game.h  game_instance.h  game_manager.h  player.h
include/network/: message_codec.h  server.h  session.h
include/room/: room.h  room_manager.h
proto/: sanguosha.proto
scripts/: test_room.py
src/: main.cpp
src/client/: game_client.cpp
src/game/: CMakeLists.txt  game_instance.cpp  game_manager.cpp  player.cpp
src/network/: CMakeLists.txt  message_codec.cpp  server.cpp  session.cpp
src/room/: CMakeLists.txt  room.cpp  room_manager.cpp
test/: CMakeLists.txt  integration_test.cpp  network_test.cpp
